--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -4,7 +4,7 @@
     <tbody>
       <tr>
         <td>
-          <%= fa_icon "check-cirlce", class: "connect", text: "Netsuite" %>
+          <%= fa_icon "check-cirlce", class: "connected", text: "Netsuite" %>
         </td>
         <td>
           <%= button_to t("dashboards.show.import_now"), netsuite_imports_path, class: '-n-btn' %>
