Imports netsuite employees successfully
- import and displays successfly imported netsuite employeees
- TODO: needs to account for unsuccessful imports and empty profiles
- TODO: abstract out the Jobvite::ImportsPresent to a NamelyImportsPresenter

--- a/app/views/netsuite_imports/create.html.erb
+++ b/app/views/netsuite_imports/create.html.erb
@@ -1,6 +1,32 @@
 <%= render "subnav" %>
 
 <h1>Netsuite</h1>
-<% if @netsuite_import %>
-  <strong><%= t("status.success") %></strong>
+<% if @netsuite_imports_presenter.imported_candidates.empty? %>
+  <strong><%= t(".empty_successful_imports") %></strong>
+<% else %>
+  <strong><%= t(".imported_successfully") %></strong>
+  <table>
+    <thead>
+      <tr>
+        <th><%= t(".employee_title") %></th>
+        <th><%= t(".email_address_title") %></th>
+        <th><%= t(".user_status_title") %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @netsuite_imports_presenter.imported_candidates.each do |employee| %>
+        <tr>
+          <td>
+            <%= "#{employee["first_name"]} #{employee["last_name"]}" %>
+          </td>
+          <td>
+            <%= employee["email"] %>
+          </td>
+          <td>
+            <%= employee["user_status"] %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
