--- a/app/views/net_suite_connections/_form.html.erb
+++ b/app/views/net_suite_connections/_form.html.erb
@@ -1,8 +1,27 @@
+<% unless form.object.subsidiary_id.present? %>
+  <div class="form-row">
+    <%= form.input(
+      :subsidiary_id,
+      as: :select,
+      collection: form.object.subsidiaries,
+      input_html: { class: 'half' }
+    ) %>
+  </div>
+<% end %>
+
 <div class="form-row">
-  <%= form.input(
-    :subsidiary_id,
+  <%= form.input(:matching_type,
+    collection: NetSuite::Connection.matching_types.keys,
     as: :select,
-    collection: form.object.subsidiaries,
-    input_html: {class: 'half'}
+    label: "Employee Matching Strategy",
+    include_blank: false,
+    selected: form.object.matching_type,
+    label_method: Proc.new {|o| t(".matching_type.#{o}") },
+    input_html: { class: 'half' }
   ) %>
+  <hr />
+
+  <p>
+    <%= t(".matching_type_help") %>
+  </p>
 </div>
